# cve2bf

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  cli.py  config.py  logging_config.py  main.py
backend/app/api/: deps.py  routes.py
backend/app/data/: bf_taxonomy.json  cwe2bf.json
backend/app/llm/: extractor.py  schema_builder.py  vllm_client.py
backend/app/models/: api_schemas.py  bf.py
backend/app/rule_engine/: backward_tree.py  chain_builder.py  cwe2bf.py  taxonomy.py  validator.py
backend/app/services/: nvd_client.py  orchestrator.py
backend/tests/: conftest.py  test_backward_tree.py  test_chain_builder.py  test_cwe2bf.py  test_orchestrator.py  test_taxonomy.py  test_validator.py
frontend/: app.js  index.html  styles.css
