[project]
name = "cve2bf-platform"
version = "1.0.0"
description = "Deterministic CVE to Bugs Framework (BF) chain generation platform."
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
